@@ -54,8 +54,6 @@ java {
 
 test {
     useJUnitPlatform()
-    jvmArgs '--add-opens=java.base/java.nio=ALL-UNNAMED',
-            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
 }
 
 // Optional: customize shadowJar minimize if needed
