@@ -42,6 +42,4 @@ java {
 
 test {
     useJUnitPlatform()
-    jvmArgs '--add-opens=java.base/java.nio=ALL-UNNAMED',
-            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
 }
